# quadboost

./: .gitignore  CMakeLists.txt  README.md  SVM_on_filters.py  boost_iterator.py  boost_manager.py  data_preprocessing.py  encodings.json  label_encoder.py  main.py  main_transboost.py  mnist_dataset.py  quadboost.py  rrc-features_plotting.py  setup.py  torch_test.py  utils.py  verbal_encodings.json  weak_learner.py
callbacks/: __init__.py  boost_manager.py  break_callbacks.py  callback.py  callback_list.py  callbacks_manager_iterator.py  iterator_manager.py  logger.py  model_checkpoint.py  progression.py  restore.py  save_callbacks.py  tracker.py  update_callbacks.py
cloner/: cloners.py
data_preprocessing/: convolutional_filtering.py  haar_preprocessing.py  mean_haar.py
encodings/: encodings.json
mnist/: ideal_processing.py
mnist_ideals/: ideal_mnist.json  ideal_mnist_sample.json  ideal_processing.py  mnist_visualization.py
quadboost/: cifar10.py  mnist_dataset.py  quadboost.py  transboost.py
tests/: test_quadboost.py
utils/: __init__.py  misc.py  multiprocessing_utils.py  timed.py
weak_learner/: __init__.py  cloner.py  decision_stump.py  decision_stump_gpu.py  decision_stump_parallelized.py  decision_tree.py  local_convolution.py  random_convolution.py  random_filters.py  ridge.py  stump.py  (+2 more)
weak_learner/decision_stump/: CMakeLists.txt  __init__.py  array.h  decision_stump.py  decision_stump_gpu.py  decision_stump_parallelized.py  stump.h  stump.py  stump_finder.h
weak_learner/decision_stump/src/: stump.cc  stump.h  stump_finder.cc  stump_finder.h
(+45 files in other folders)
